Changed DB and fixed auction item methods to work with change.

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -61,6 +61,12 @@
         </p>
 
         <p>
+            <label for="category">Item Name: </label>
+            <input id= "category" type="text" name="category" required/> <br/>
+            <span class="required">*</span>
+        </p>
+
+        <p>
             <label for="description">Description: </label>
             <input id="description" type="text" name="description" required/> <br/>
             <span class="required">*</span>
@@ -75,18 +81,6 @@
         <p>
             <label for="image">Picture (JPG, PNG, JPEG)</label>
             <input type="file" id="image" name="image">
-            <span></span>
-        </p>
-
-        <p>
-            <label for="color">Color: </label>
-            <input id="color" type="text" name="color"/> <br/>
-            <span></span>
-        </p>
-
-        <p>
-            <label for="manufacturedYear">Manufactured Year: </label>
-            <input id="manufacturedYear" type="number" name="manufacturedYear" pattern="[1-2]{1}[0-9]{4}"/> <br/>
             <span></span>
         </p>
 
