Started on the account management page along with user information update functionality.

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bagel+Fat+One&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <title>Account Page</title>
     <link th:href="@{/style.css}" rel="stylesheet"/>
     <link th:href="@{/login.css}" rel="stylesheet"/>
+    <link th:href="@{/account.css}" rel="stylesheet"/>
+    <link th:href="@{/styling.css}" rel="stylesheet"/>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             fetch("/loggedUser")
@@ -32,7 +26,7 @@
                 userDiv.innerHTML = `
                   <button class="dropbtn">Welcome, ` + user.username + `</button>
                   <div class="dropdown-content">
-                    <a href="/account-page">Manage Account</a>
+                    <a href="#">Manage Account</a>
                     <a href="#">Manage Items</a>
                     <a href="/logout">Log Out</a>
                   </div>
@@ -46,7 +40,6 @@
         }
     </script>
 </head>
-
 <body>
 <header>
     <div class="nav">
@@ -60,14 +53,31 @@
         </ul>
     </div>
 </header>
-<section>
-    <div class="hero-image">
-        <div class="hero-text">
-            <h1>Old World Auctions</h1>
-            <h2>Buy Sell Raise Hell™</h2>
-        </div>
-    </div>
-</section>
-</body>
 
-</html>
+<div class="content">
+    <h1>Manage Account</h1>
+
+    <h3>Update Account Info</h3>
+    <form id="accountUpdateForm" action="/update-user-info" method="post">
+        <p>
+            <label for="username">Username: </label>
+            <input id= "username" type="text" name="username"/> <br/>
+        </p>
+
+        <p>
+            <label for="password">Password: </label>
+            <input id= "password" type="text" name="password"/> <br/>
+        </p>
+
+        <p>
+            <label for="originalPassword">Original Password: </label>
+            <input id= "originalPassword" type="text" name="originalPassword"/> <br/>
+        </p>
+    </form>
+
+    <button id="submit" form="accountUpdateForm" type="submit">Update Info</button>
+
+    <h3>Add/Manage Payment Methods</h3>
+</div>
+
+</body>
