--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -61,7 +61,7 @@
         </p>
 
         <p>
-            <label for="category">Item Name: </label>
+            <label for="category">Category: </label>
             <input id= "category" type="text" name="category" required/> <br/>
             <span class="required">*</span>
         </p>
