Changed category field for new item to be a dropdown with select values. Fixed payment method SQL.

--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -62,7 +62,11 @@
 
         <p>
             <label for="category">Category: </label>
-            <input id= "category" type="text" name="category" required/> <br/>
+            <select id="category" name="category">
+                <option value="Electronics">Electronics</option>
+                <option value="Furniture">Furniture</option>
+                <option value="Clothing">Clothing</option>
+            </select>
             <span class="required">*</span>
         </p>
 
