Categories added with extra item for testing

--- a/src/main/resources/static/auctionList.css
+++ b/src/main/resources/static/auctionList.css
@@ -1,33 +1,39 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     background: rgb(6, 6, 46);
     font-family: sans-serif;
 }
-  h1{
+
+h1 {
     text-align: center;
     font-size: 40px;
     margin: 0;
     padding-top: 10px;
-  }
+    color: white;
+}
 
-h3{
+h2 {
     text-align: center;
     font-size: 30px;
     margin: 0;
     padding-top: 10px;
+    color: white;
 }
-a{
+
+a {
     text-decoration: none;
+    color: white;
 }
-.gallery{
+
+.gallery {
     display: flex;
-    flex-wrap: wrape;
-    width: 100%;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin: 50px 0;
 }
-.content{
+
+.content {
     width: 20%;
     margin: 30px;
     box-sizing: border-box;
@@ -41,50 +47,55 @@ a{
     background: #f2f2f2;
 }
 
-img{
+img {
     width: 200px;
     height: 200px;
-    text-align: center;
     margin: 0 auto;
     display: block;
 }
-p{
-    text-align:center;
-    color:black;
+
+p {
+    text-align: center;
+    color: black;
     padding-top: 0 8px;
 }
-h6{
+
+h6 {
     font-size: 14px;
     text-align: center;
     color: #58616b;
     margin-top: 2px;
 }
-ul:not(.headerNav){
+
+ul:not(.headerNav) {
     list-style: none;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 0;
 }
-li{
 
-padding-top: 5px;
+li {
+    padding-top: 5px;
 }
-.fa{
+
+.fa {
     font-size: 26px;
     transition: .4s;
     margin: 5px;
 }
-.check{
+
+.check {
     color: #ff9f43;
 }
-.content:hover{
 
+.content:hover {
     transform: scale(1.1);
     transition: .6s;
 }
 
-.buy-1{
+.buy-1,
+.save {
     text-align: center;
     font-size: 24px;
     color: #fff;
@@ -94,21 +105,24 @@ padding-top: 5px;
     cursor: pointer;
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
+}
+
+.buy-1 {
     background: #2183a2;
 }
-.save{
-    text-align: center;
-    font-size: 24px;
-    color: #fff;
-    width: 100%;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+
+.save {
     background: #ff9f43;
 }
 
-h1 {
-    color: white;
+@media screen and (max-width: 768px) {
+    .content {
+        width: calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .content {
+        width: 100%;
+    }
 }
