--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,38 +13,7 @@
     <title>Home</title>
     <link th:href="@{/style.css}" rel="stylesheet"/>
     <link th:href="@{/login.css}" rel="stylesheet"/>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            fetch("/loggedUser")
-                .then(response => response.json())
-                .then(data => {
-                    displayUser(data);
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                });
-        });
-
-        function displayUser(user){
-            const userDiv = document.getElementById("user");
-            userDiv.innerHTML = "";
-            if(user.username != "") {
-                userDiv.innerHTML = `
-                  <button class="dropbtn">Welcome, ` + user.username + `</button>
-                  <div class="dropdown-content">
-                    <a href="/account-page">Manage Account</a>
-                    <a href="#">Manage Items</a>
-                    <a href="/logout">Log Out</a>
-                  </div>
-                `;
-            } else {
-                let loginButton = document.createElement("a");
-                loginButton.setAttribute("href", "/login-page");
-                loginButton.textContent = "Login";
-                userDiv.appendChild(loginButton);
-            }
-        }
-    </script>
+    <script type="text/javascript" th:src="@{/login.js}"></script>
 </head>
 
 <body>
