--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -71,7 +71,7 @@
 
     </form>
     <div style="text-align: center;">
-        <button id="submit" form="itemAddForm" type="submit">Add Item</button>
+        <button class="submit" form="itemAddForm" type="submit">Add Item</button>
     </div>
 </body>
 </html>
